--- a/src/CSP2.Desktop/Views/Pages/PluginMarketPage.xaml
+++ b/src/CSP2.Desktop/Views/Pages/PluginMarketPage.xaml
@@ -13,15 +13,21 @@
         <converters:BoolToStatusTextConverter x:Key="BoolToStatusTextConverter"/>
         <converters:BoolToInstallTextConverter x:Key="BoolToInstallTextConverter"/>
         <converters:InverseBoolConverter x:Key="InverseBoolConverter"/>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <converters:CountToVisibilityConverter x:Key="CountToVisibilityConverter"/>
     </UserControl.Resources>
 
-    <Grid Margin="32">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+    <ScrollViewer Style="{StaticResource ModernScrollViewer}"
+                  VerticalScrollBarVisibility="Auto" 
+                  HorizontalScrollBarVisibility="Disabled"
+                  Padding="32,32,20,32">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
         <!-- 标题栏 -->
         <Grid Grid.Row="0" Margin="0,0,0,24">
@@ -330,19 +336,18 @@
         </Border>
 
         <!-- 插件列表 -->
-        <ScrollViewer Grid.Row="3" VerticalScrollBarVisibility="Auto">
-            <ItemsControl ItemsSource="{Binding FilteredPlugins}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel Orientation="Horizontal"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
+        <ItemsControl Grid.Row="3" ItemsSource="{Binding FilteredPlugins}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
 
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border Padding="20"
-                                Margin="0,0,16,16"
-                                Width="300">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Border Padding="20"
+                            Margin="0,0,16,16"
+                            Width="300">
                             <Border.Style>
                                 <Style TargetType="Border" BasedOn="{StaticResource CardStyle}">
                                     <Setter Property="Padding" Value="20"/>
@@ -544,8 +549,7 @@
                         </Border>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
+        </ItemsControl>
 
         <!-- 空状态提示 -->
         <Border Grid.Row="3" 
@@ -618,6 +622,7 @@
                 </StackPanel>
             </Border>
         </Grid>
-    </Grid>
+        </Grid>
+    </ScrollViewer>
 </UserControl>
 
